<resources>
    <string name="app_name">SafetyHat</string>
    <string name="safety_hat_description">SafetyHat logo</string>
    <string name="safety_hat">SafetyHat</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="head_foreground_description">Head foreground image</string>
    <string name="cf">CF: </string>
    <string name="cf_hint">Type the CF</string>
    <string name="cf_description">Codice Fiscale Input Field</string>
    <string name="password">Password: </string>
    <string name="password_hint">Type the password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="menù">Menu Icon</string>
    <string name="site">Site Info</string>
    <string name="account">Account Info</string>
    <string name="create_site">Create Site</string>
    <string name="logout">Logout</string>
    <string name="your_position">Your Position</string>
    <string name="map_placeholder">Map Placeholder</string>
    <string name="first_name">First Name:  </string>
    <string name="last_name">Last Name:  </string>
    <string name="birthday_date">Birthday Date:  </string>
    <string name="telephone">Telephone:  </string>
    <string name="change_password">Change Password</string>"
    <string name="alerts">Alerts</string>
    <string name="weather">Weather Conditions</string>
    <string name="weather_placeholder">Weather Placeholder</string>
    <string name="site_id">Site ID: </string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="total_worker">Total Workers: </string>
    <string name="scaffolding_number">Scaffolding Number: </string>
    <string name="site_address">Site Address: </string>
    <string name="site_radius">Site Radius: </string>
    <string name="site_manager_info">Site Manager Info: </string>
    <string name="registration">Registration</string>
    <string name="hint_first_name">type the first name</string>
    <string name="hint_last_name">type the last name</string>
    <string name="hint_birthdate">DD/MM/YYYY</string>
    <string name="hint_telephone">type the telephone number</string>
    <string name="hint_password">type the password</string>
    <string name="createAccount">Create Account</string>
    <string name="hint_cf">type the CF</string>
    <string name="insert_start_date">DD/MM/YYYY</string>
    <string name="insert_end_date">DD/MM/YYYY</string>
    <string name="insert_max_workers">insert the maximum number of workers</string>
    <string name="insert_scaffolding">insert the scaffolding number</string>
    <string name="insert_address">insert the site address</string>
    <string name="insert_radius">insert the site radius</string>
    <string name="generated_security_code">generated the security code</string>
    <string name="generate">Generate</string>
    <string name="create_site_generate_qr">Create Site and Generate QR</string>
    <string name="scaffolding">Scaffolding</string>"
    <string name="qr_code_frame_description">QR code frame where generated QR code will be inserted</string>
    <string name="address">Address</string>
    <string name="security_code">Security Code</string>
    <string name="max_workers">Max Workers</string>
    <string name="site_icon_description">site icon description</string>
    <string name="back">Back</string>
    <string name="crane_foreground_description">Crane foreground image</string>
    <string name="security_code_title">Site Security Code</string>
    <string name="insert_sc">Security Code</string>
    <string name="hint_sc"> Type Security Code</string>
    <string name="verify_sc">Verify Security Code</string>
    <string name="download_qr_button">Download QR Code</string>
    <string name="address_hint">"Street Name, Number, City, Region, Country"</string>
    <string name="home">Home</string>
    <string name="see_qr_button">Show QR Code</string>
    <string name="sites_overview">Sites Overview</string>
    <string name="site_info">Site Info</string>
    <string name="new_communication">New Communication</string>
    <string name="enter_communication">Write Communication</string>
    <string name="send_communication">Send Communication</string>
    <string name="communications">Communications</string>
    <string name="select_site_id">Select Site ID</string>
    <string name="thumbs_up">Thumbs Up</string>
    <string name="recover_password">Recover password</string>
    <string name="hint_email">type the email for password recovery</string>
    <string name="email">Email</string>
    <string name="verification_code">Insert Verification Code</string>
    <string name="delete_account">Delete Account</string>
    <string name="photo">Add Photo</string>
    <string name="picture">Take a Picture</string>
    <string name="ar_measuring_tool">AR Measuring Tool</string>

</resources>