<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home_worker"
        android:icon="@mipmap/safety_hat_big_foreground"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_account_info_worker"
        android:icon="@mipmap/head_foreground"
        android:title="@string/account" />
    <item
        android:id="@+id/nav_alert_worker"
        android:icon="@mipmap/traffic_cone_foreground"
        android:title="@string/alerts" />
    <item
        android:id="@+id/nav_face_worker"
        android:icon="@mipmap/photo_foreground"
        android:title="@string/photo" />
    <item
        android:id="@+id/nav_logout_worker"
        android:icon="@drawable/logout_foreground"
        android:title="@string/logout" />
</menu>
