<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:contentDescription="@string/menù"
        android:src="@drawable/menu_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_site_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/create_site"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />


    <View
        android:id="@+id/separator_line"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:background="#2C2C2C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_site_title" />

    <ImageView
        android:id="@+id/site_icon"
        android:layout_width="151dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/site_icon_description"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_site_title"
        app:srcCompat="@mipmap/site_foreground" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="370dp"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_icon">

        <LinearLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Start Date -->
            <TextView
                android:id="@+id/start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/start_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/start_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="startDate"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/insert_start_date"
                android:inputType="date"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:minHeight="48dp" />

            <!-- Estimated End Date -->
            <TextView
                android:id="@+id/end_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/end_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/end_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="endDate"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/insert_end_date"
                android:inputType="date"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:minHeight="48dp" />

            <!-- N° Max Workers -->
            <TextView
                android:id="@+id/max_workers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/max_workers"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/max_workers_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="maxWorkers"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/insert_max_workers"
                android:inputType="number"
                android:minHeight="48dp" />

            <!-- N° Scaffolding -->
            <TextView
                android:id="@+id/scaffolding_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/scaffolding"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/scaffolding_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="scaffolding"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/insert_scaffolding"
                android:inputType="number"
                android:minHeight="48dp" />

            <!-- Address -->
            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="address"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/insert_address"
                android:inputType="textPostalAddress"
                android:minHeight="48dp" />

            <!-- Site Radius -->
            <TextView
                android:id="@+id/site_radius_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/site_radius"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/site_radius_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="siteRadius"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/insert_radius"
                android:inputType="number"
                android:minHeight="48dp" />

        </LinearLayout>
    </ScrollView>
    <!-- Generate Security Code -->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view">

        <EditText
            android:id="@+id/security_code_field"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="securityCode"
            android:enabled="false"
            android:focusable="false"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/generated_security_code"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/generate_code_button"
            android:layout_width="101dp"
            android:layout_height="49dp"
            android:backgroundTint="#2C2C2C"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/generate"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Create Site & Generate QR Button -->
    <Button
        android:id="@+id/create_site_button"
        android:layout_width="370dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2C2C2C"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/create_site_generate_qr"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>
