<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="222dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="#2C2C2C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_line"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="96dp"
        android:background="#2C2C2C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_title" />


    <ImageView
        android:id="@+id/worker_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="124dp"
        android:contentDescription="@string/head_foreground_description"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_title"
        app:srcCompat="@mipmap/head_foreground" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="370dp"
        android:layout_height="372dp"
        android:layout_marginTop="30dp"
        android:elevation="4dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_icon">

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- First Name -->
            <TextView
                android:id="@+id/first_name_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/first_name_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:minHeight="48dp" />

            <!-- Last Name -->
            <TextView
                android:id="@+id/last_name_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/last_name_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="surname"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_last_name"
                android:inputType="text"
                android:minHeight="48dp" />

            <!-- Birthdate -->
            <TextView
                android:id="@+id/birthdate_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/birthday_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/birthdate_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="birthdate"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_birthdate"
                android:inputType="date"
                android:minHeight="48dp" />

            <!-- CF -->
            <TextView
                android:id="@+id/cf_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/cf"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cf_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="cf"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_cf"
                android:inputType="text"
                android:minHeight="48dp" />

            <!-- Phone Number -->
            <TextView
                android:id="@+id/phone_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/telephone"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/phone_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_telephone"
                android:inputType="phone"
                android:minHeight="48dp" />

            <!-- Password -->
            <TextView
                android:id="@+id/password_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit_registration_button"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2C2C2C"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/createAccount"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
