<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/back_icon_login"
        android:layout_width="72dp"
        android:layout_height="67dp"
        android:contentDescription="@string/back"
        android:foregroundGravity="top|left"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_foreground" />

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="400dp"
        android:layout_height="92dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#2C2C2C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_line"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="103dp"
        android:background="#2C2C2C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_title" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="217dp"
        android:layout_height="203dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="97dp"
        android:contentDescription="@string/head_foreground_description"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/head_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_title"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/rounded_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cf"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cfEditText"
            android:layout_width="337dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:hint="@string/hint_cf"
            android:inputType="text"
            android:text="GRFLVC01H49C351K"
            />

        <Button
            android:id="@+id/recoverButton"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:backgroundTint="#2C2C2C"
            android:text="@string/recover_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>