<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:contentDescription="@string/menù"
        android:src="@drawable/menu_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ImageView
        android:id="@+id/qr_code_frame"
        android:layout_width="350dp"
        android:layout_height="430dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/qr_code_frame_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <Button
        android:id="@+id/download_qr_button"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/download_qr_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_frame"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#2C2C2C"
        android:elevation="4dp"
        android:fontFamily="sans-serif-condensed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
